--- a/src/components/NotFound/notfound.module.css
+++ b/src/components/NotFound/notfound.module.css
@@ -1,10 +1,10 @@
 .notFound h1{
   color: #000;
 font-family: Inter;
-font-size: 80px;
+font-size: 4rem;
 font-style: normal;
 font-weight: 500;
-line-height: 115px;
+line-height: 6rem;
 letter-spacing: 3.3px;
 }
 .notFound p{
